# risc0

examples/merkle/: Cargo.toml  README.md
examples/merkle/cli/: Cargo.toml
examples/merkle/contracts/: Cargo.toml
examples/merkle/contracts/contracts/: Merkle.sol
examples/merkle/contracts/src/: lib.rs
examples/merkle/contracts/tests/contract_tests/: main.rs  utils.rs
examples/merkle/methods/: Cargo.toml
examples/merkle/methods/guest/: Cargo.toml
examples/merkle/methods/src/: lib.rs
examples/zk-comp/: Cargo.toml  README.md
examples/zk-comp/cli/: Cargo.toml
examples/zk-comp/contracts/: Cargo.toml
examples/zk-comp/contracts/contracts/: Compress.sol  HelloBonsai.sol
examples/zk-comp/contracts/src/: lib.rs
examples/zk-comp/contracts/tests/contract_tests/: main.rs
examples/zk-comp/methods/: Cargo.toml
examples/zk-comp/methods/guest/: Cargo.toml
examples/zk-comp/methods/src/: lib.rs
examples/zvg/: Cargo.toml  README.md  package.json
examples/zvg/cli/: Cargo.toml
examples/zvg/contracts/: Cargo.toml
examples/zvg/contracts/contracts/: ERC721.sol  HelloBonsai.sol  ZVG.sol
examples/zvg/contracts/src/: lib.rs
examples/zvg/contracts/tests/contract_tests/: main.rs
examples/zvg/methods/: Cargo.toml
examples/zvg/methods/guest/: Cargo.toml
examples/zvg/methods/src/: lib.rs
templates/bonsai/contracts/src/: lib.rs
