[package]
name = "merkle-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0", features = ["ws", "rustls"] }

rs_merkle = { version = "1.4", default-features = false }

[build-dependencies]
ethers-solc = { version = "1.0", features = ["full"] }

[dev-dependencies]
merkle-methods = { workspace = true }
risc0-zkvm = { workspace = true }
tokio = "1.24"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
