[package]
name = "merkle-methods"
version = "0.1.0"
edition = "2021"

[build-dependencies]
risc0-build = { workspace = true }

[dev-dependencies]
ethabi = { version = "18.0", default-features = false }
risc0-zkp = { workspace = true }
risc0-zkvm = { workspace = true }
rs_merkle = { version = "1.4", default-features = false }

[package.metadata.risc0]
methods = ["guest"]
