[package]
name = "compress-contracts"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "1.0", features = ["ws", "rustls"] }

[build-dependencies]
ethers-solc = { version = "1.0", features = ["full"] }
ethers-core = { version = "1.0" }

[dev-dependencies]
compress-methods = { workspace = true }
risc0-zkvm = { workspace = true }
tokio = "1.24"

[features]
cuda = ["risc0-zkvm/cuda"]
default = []
metal = ["risc0-zkvm/metal"]
