[package]
name = "compress-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# NOTE: ethabi is used here instead of ethers because ethers requires getrandom support.
ethabi = { version = "18.0", default-features = false }
# Must match RISC Zero version specified in the project root.
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false }
miniz_oxide = { version = "0.7.0"}

[profile.release]
lto = true
opt-level = 3
