[package]
name = "zvg-methods-guest"
version = "0.1.0"
edition = "2021"

[workspace]

[dependencies]
# NOTE: ethabi is used here instead of ethers because ethers requires getrandom support.
ethabi = { version = "18.0", default-features = false }
# Must match RISC Zero version specified in the project root.
risc0-zkvm = { path = "../../../../risc0/zkvm", default-features = false }
serde = { version = "1.0", default-features = false,  features = ["derive"] }
#tera = { version = "1.0", default-features = false }
rand = { version = "0.8.5", default-features = false, features = ["small_rng"] }


[profile.release]
lto = true
opt-level = 3
